2010-02-03  Andreia Gaita  <avidigal@novell.com>

	moved out of tools/ and into the root, as part of making the
	generator step automatic
	* Makefile.am: make the generator step the default when running
	make, and run it twice, there are files that only get generated
	on a second pass

2010-01-29  Andreia Gaita  <avidigal@novell.com>

	* Generator.cs: ignore plugin-domevents.h when parsing headers
	* Helper.cs: don't check file size or content if the file doesn't
	exist

2010-01-14  Alan McGovern  <amcgovern@novell.com>

	* Generator.cs: Add authors.h to the ignore list so the
	  generator can run.

2009-12-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Generator.cs: The asf directory no longer exists, don't try to
	process it.

2009-12-15  Alan McGovern  <amcgovern@novell.com>

	* TypeReference.cs: Rename ApplyStyle to ConvertSetterValues
	  to reflect what it actually does. Rename ApplyDefaultStyle
	  to GetDefaultStyle and make it return the default style
	  instead.

2009-11-20  Chris Toshok  <toshok@ximian.com>

	* GlobalInfo.cs: add "GenerateManagedEventField" to the known
	annotations for events.  I could have sworn I already did this...

2009-11-20  Sebastien Pouliot  <sebastien@ximian.com>

	* Generator.cs: Generate EventIds and Events as static types.
	* ParameterInfo.cs: Marshal bool* correctly (just like bool)

2009-11-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Generator.cs: Added special case for managedtypeinfo.h

2009-11-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Generator.cs: Update according to Type ctor changes.

2009-11-09  Chris Toshok  <toshok@ximian.com>

	* FieldInfo.cs: add GenerateManagedEventField to determine if we
	output the static RoutedEvent field (default = false).

	* Generator.cs (GenerateManagedEvents): if the event is marked as
	GenerateManagedEventField=true, output the static field.  Also,
	add it to an autogenerated method for creating a dispatcher from
	the event id (Events.CreateDispatcherFromEventId).
