@@ -1,3 +1,6 @@
 /Makefile
 /Makefile.in
 /bin
+/stamp
+/*.exe
+/*.mdb
