@@ -1,10 +1,14 @@
-all: generate
+FILES = $(wildcard ../src/*.cpp) $(wildcard ../src/*.h) $(wildcard ../plugin/*.h)
 
-generate: generator.exe ../src/*.cpp ../src/*.h
+stamp: generator.exe $(FILES)
 	$(MONO) --debug generator.exe
 	$(MONO) --debug generator.exe
+	touch stamp
 
-generator.exe: *.cs
-	gmcs *.cs -r:System.dll,System.Xml.dll -debug+ -out:generator.exe
+all: stamp
+
+SRC = $(wildcard *.cs)
+generator.exe: $(SRC)
+	gmcs $(SRC) -r:System.dll,System.Xml.dll -debug+ -out:generator.exe
 
 CLEANFILES= generator.exe generator.exe.mdb
